<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent" 
              android:gravity="center_horizontal">

   
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/backToMain"
            android:id="@+id/btnBackToMain"/>
     <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:id="@+id/btnStartRecord"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txtStop"
            android:id="@+id/btnStopRecord"/>
</LinearLayout>
