<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background"
        >
        <ImageButton 
            android:id="@+id/btnGo"
            android:layout_width="55dp"
            android:layout_height="30dp"           
            android:src="@drawable/back"
            
            />
    <ImageView android:id="@+id/imgResult"
               android:layout_width="match_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center">
        <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:enabled="false"/>
        <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txtOpenCamera"
                android:id="@+id/btnOpenCamera"/>


        <Button
                android:id="@+id/btnSave"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/saveImage"
                android:enabled="false"/>



    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center">
         <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtStop"
                android:id="@+id/btnStop" android:enabled="false"/>

        <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/record"
                android:id="@+id/btnRecord" android:enabled="false"/>

       

        

        <Button
                android:id="@+id/btnPlayback"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Play" android:enabled="false"/>

        </LinearLayout>


</LinearLayout>

